--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ readme = "README.md"
 serde-big-array = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
 enum-map = { version = "1.1.1", features = ["serde"] }
+serde_json = "1.0.69"
+derive_more = "0.99.16"
 
 [features]
 randomizer = []
