--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 enum-map = { version = "1.1.1", features = ["serde"] }
 serde_json = "1.0.69"
 derive_more = "0.99.16"
+paste = "1.0.6"
 
 [features]
 randomizer = []
